--- a/media/css/style.scss
+++ b/media/css/style.scss
@@ -116,12 +116,7 @@ body{
     height: 513px;
     background: url("../img/visual.png");
     
-    .left-gradient{
-        position: absolute;
-        height: 100%;
-        width: 15%;
-        background-image: linear-gradient(86deg, #768c95 0%, #768c95 27%, rgba(118, 140, 149, 0) 100%);
-    }
+    
     .prev,.next{
         cursor: pointer;
         position: absolute;
@@ -150,9 +145,27 @@ body{
       z-index: 22;
       top: -61px;
     }
+    .catush2{
+        /*   max-height: 100% */
+        z-index: 22;
+        top: -28px;
+      }
+    .catush3{
+        /*   max-height: 100% */
+        z-index: 22;
+        top: -41px;
+      }
+      .myslides{
+        animation-duration: 2s;
+      }
+  
+    
     .info{
         padding-left: 5%;
         padding-top: 25%;
+        .title{
+            text-transform:uppercase;
+        }
         .logo-img{
             position: relative;
             display: flex;
